.local/share/k8s/echo.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`echo`)
    kind: Rule
    services:
    - name: echo
      port: http
      strategy: p2c
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  selector:
    app: echo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Pod
metadata:
  name: echo
  labels:
    app: echo
spec:
  containers:
    - name: echo-container
      image: python:3.9
      ports:
      - name: http
        containerPort: 8000
      command: ["python", "-c"]
      args:
      - |
        [...]
