.local/share/k8s/echotcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  tls: {}
  routes:
  - match: HostSNI(`echo.local`)
    services:
    - name: echo
      port: tcp
      proxyProtocol:
        version: 2
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  selector:
    app: echo
  ports:
    - name: tcp
      protocol: TCP
      port: 12345
      targetPort: tcp
---
apiVersion: v1
kind: Pod
metadata:
  name: echo
  labels:
    app: echo
spec:
  containers:
    - name: echo-container
      image: python:3.9
      ports:
      - name: tcp
        containerPort: 12345
      command: ["python", "-c"]
      args:
      - |
        [...]
